Enrichment Service
Added producer API
Added producer simulator for tests
Added a mock

Issue-ID: NONRTRIC-173
